--- a/cn.zh-cn/用户指南/创建告警规则-4.md
+++ b/cn.zh-cn/用户指南/创建告警规则-4.md
@@ -106,7 +106,7 @@
         <tr id="row89519954220"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1951159164214"><a name="p1951159164214"></a><a name="p1951159164214"></a>告警策略</p>
         </td>
         <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p9951189154217"><a name="p9951189154217"></a><a name="p9951189154217"></a>触发告警规则的告警策略。</p>
-        <p id="p2095129124217"><a name="p2095129124217"></a><a name="p2095129124217"></a>例如：CPU使用率，监控周期为5分钟，连续三个周期原始值≥80%</p>
+        <p id="p2095129124217"><a name="p2095129124217"></a><a name="p2095129124217"></a>例如：CPU使用率，监控周期为5分钟，连续三个周期平均值≥80%</p>
         </td>
         <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p29511797423"><a name="p29511797423"></a><a name="p29511797423"></a>-</p>
         </td>
@@ -114,8 +114,9 @@
         <tr id="row3951891428"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p19951139124214"><a name="p19951139124214"></a><a name="p19951139124214"></a>挂载点</p>
         </td>
         <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p795116911425"><a name="p795116911425"></a><a name="p795116911425"></a>当监控指标为细颗粒度的磁盘类监控指标时需配置该参数。</p>
+        <p id="p04530143561"><a name="p04530143561"></a><a name="p04530143561"></a>Windows系统请输入对应的驱动器号，比如C、D或者E等，Linux系统请输入对应的挂载点，比如/dev、/opt等。</p>
         </td>
-        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p159511497428"><a name="p159511497428"></a><a name="p159511497428"></a>/</p>
+        <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p159511497428"><a name="p159511497428"></a><a name="p159511497428"></a>/dev</p>
         </td>
         </tr>
         <tr id="row5951129114220"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p179518918423"><a name="p179518918423"></a><a name="p179518918423"></a>告警级别</p>
