--- a/cn.zh-cn/用户指南/删除资源分组.md
+++ b/cn.zh-cn/用户指南/删除资源分组.md
@@ -11,5 +11,5 @@
     **图 1**  删除资源分组<a name="fig416376551"></a>  
     ![](figures/删除资源分组.png "删除资源分组")
 
-6.  单击“确定”，可删除该资源分组。
+6.  单击“是”，可删除该资源分组。
 
