--- a/cn.zh-cn/用户指南/弹性云服务器的监控指标.md
+++ b/cn.zh-cn/用户指南/弹性云服务器的监控指标.md
@@ -143,6 +143,50 @@
 <td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p595622489134"><a name="p595622489134"></a><a name="p595622489134"></a>√</p>
 </td>
 </tr>
+<tr id="row210295722713"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p926613451850"><a name="p926613451850"></a><a name="p926613451850"></a>CPU积分使用量</p>
+</td>
+<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p22662457511"><a name="p22662457511"></a><a name="p22662457511"></a>×</p>
+</td>
+<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p628211450516"><a name="p628211450516"></a><a name="p628211450516"></a>√（仅T6型支持）</p>
+</td>
+<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p19282345551"><a name="p19282345551"></a><a name="p19282345551"></a>×</p>
+</td>
+<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p122824451951"><a name="p122824451951"></a><a name="p122824451951"></a>√（仅T6型支持）</p>
+</td>
+</tr>
+<tr id="row11525125922719"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p172981245758"><a name="p172981245758"></a><a name="p172981245758"></a>CPU积分累积量</p>
+</td>
+<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p1429813458516"><a name="p1429813458516"></a><a name="p1429813458516"></a>×</p>
+</td>
+<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p1429816451514"><a name="p1429816451514"></a><a name="p1429816451514"></a>√（仅T6型支持）</p>
+</td>
+<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p029818457510"><a name="p029818457510"></a><a name="p029818457510"></a>×</p>
+</td>
+<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p231354516518"><a name="p231354516518"></a><a name="p231354516518"></a>√（仅T6型支持）</p>
+</td>
+</tr>
+<tr id="row4117334281"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p193134459512"><a name="p193134459512"></a><a name="p193134459512"></a>CPU超额积分累积量</p>
+</td>
+<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p031319456514"><a name="p031319456514"></a><a name="p031319456514"></a>×</p>
+</td>
+<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p432994514516"><a name="p432994514516"></a><a name="p432994514516"></a>√（仅T6型支持）</p>
+</td>
+<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p63292451052"><a name="p63292451052"></a><a name="p63292451052"></a>×</p>
+</td>
+<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p432954510516"><a name="p432954510516"></a><a name="p432954510516"></a>√（仅T6型支持）</p>
+</td>
+</tr>
+<tr id="row1613112622813"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.6.1.1 "><p id="p2344945456"><a name="p2344945456"></a><a name="p2344945456"></a>CPU超额积分收费量</p>
+</td>
+<td class="cellrowborder" valign="top" width="20.202020202020204%" headers="mcps1.2.6.1.2 "><p id="p534454514517"><a name="p534454514517"></a><a name="p534454514517"></a>×</p>
+</td>
+<td class="cellrowborder" valign="top" width="18.181818181818183%" headers="mcps1.2.6.1.2 "><p id="p163442451056"><a name="p163442451056"></a><a name="p163442451056"></a>√（仅T6型支持）</p>
+</td>
+<td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.2.6.1.3 "><p id="p93600453511"><a name="p93600453511"></a><a name="p93600453511"></a>×</p>
+</td>
+<td class="cellrowborder" valign="top" width="23.232323232323235%" headers="mcps1.2.6.1.3 "><p id="p14360445159"><a name="p14360445159"></a><a name="p14360445159"></a>√（仅T6型支持）</p>
+</td>
+</tr>
 </tbody>
 </table>
 
@@ -153,9 +197,9 @@
 <a name="table2442018718425"></a>
 <table><thead align="left"><tr id="zh-cn_topic_0030911465_row15175257222846"><th class="cellrowborder" valign="top" width="15.841584158415841%" id="mcps1.2.5.1.1"><p id="zh-cn_topic_0030911465_p21236279222846"><a name="zh-cn_topic_0030911465_p21236279222846"></a><a name="zh-cn_topic_0030911465_p21236279222846"></a>指标名称</p>
 </th>
-<th class="cellrowborder" valign="top" width="29.7029702970297%" id="mcps1.2.5.1.2"><p id="zh-cn_topic_0030911465_p42417005222846"><a name="zh-cn_topic_0030911465_p42417005222846"></a><a name="zh-cn_topic_0030911465_p42417005222846"></a>指标含义</p>
+<th class="cellrowborder" valign="top" width="29.356435643564353%" id="mcps1.2.5.1.2"><p id="zh-cn_topic_0030911465_p42417005222846"><a name="zh-cn_topic_0030911465_p42417005222846"></a><a name="zh-cn_topic_0030911465_p42417005222846"></a>指标含义</p>
 </th>
-<th class="cellrowborder" valign="top" width="29.7029702970297%" id="mcps1.2.5.1.3"><p id="zh-cn_topic_0030911465_p64622851222846"><a name="zh-cn_topic_0030911465_p64622851222846"></a><a name="zh-cn_topic_0030911465_p64622851222846"></a>计算公式</p>
+<th class="cellrowborder" valign="top" width="30.04950495049505%" id="mcps1.2.5.1.3"><p id="zh-cn_topic_0030911465_p64622851222846"><a name="zh-cn_topic_0030911465_p64622851222846"></a><a name="zh-cn_topic_0030911465_p64622851222846"></a>计算公式</p>
 </th>
 <th class="cellrowborder" valign="top" width="24.752475247524753%" id="mcps1.2.5.1.4"><p id="zh-cn_topic_0030911465_p67068467222846"><a name="zh-cn_topic_0030911465_p67068467222846"></a><a name="zh-cn_topic_0030911465_p67068467222846"></a>相关说明</p>
 </th>
@@ -163,9 +207,9 @@
 </thead>
 <tbody><tr id="zh-cn_topic_0030911465_row63836764222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p3395365222846"><a name="zh-cn_topic_0030911465_p3395365222846"></a><a name="zh-cn_topic_0030911465_p3395365222846"></a>CPU使用率</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p6589110222846"><a name="zh-cn_topic_0030911465_p6589110222846"></a><a name="zh-cn_topic_0030911465_p6589110222846"></a>该指标用于统计弹性云服务器的CPU使用率，以百分比为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p6589110222846"><a name="zh-cn_topic_0030911465_p6589110222846"></a><a name="zh-cn_topic_0030911465_p6589110222846"></a>该指标用于统计弹性云服务器的CPU使用率，以百分比为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p13045074222846"><a name="zh-cn_topic_0030911465_p13045074222846"></a><a name="zh-cn_topic_0030911465_p13045074222846"></a>单个弹性云服务器CPU使用率 / 单个弹性云服务器的CPU总核数。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p13045074222846"><a name="zh-cn_topic_0030911465_p13045074222846"></a><a name="zh-cn_topic_0030911465_p13045074222846"></a>单个弹性云服务器CPU使用率 / 单个弹性云服务器的CPU总核数。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p667185262116"><a name="zh-cn_topic_0030911465_p667185262116"></a><a name="zh-cn_topic_0030911465_p667185262116"></a>该指标为从物理机层面采集的CPU使用率，数据准确性低于从弹性云服务器内部采集的数据，查看<a href="https://support.huaweicloud.com/ces_faq/ces_faq_0040.html" target="_blank" rel="noopener noreferrer">详情</a>。</p>
 </td>
@@ -173,92 +217,131 @@
 <tr id="zh-cn_topic_0030911465_row47509658222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p23077113222846"><a name="zh-cn_topic_0030911465_p23077113222846"></a><a name="zh-cn_topic_0030911465_p23077113222846"></a>内存使用率</p>
 <p id="zh-cn_topic_0030911465_p6367428222846"><a name="zh-cn_topic_0030911465_p6367428222846"></a><a name="zh-cn_topic_0030911465_p6367428222846"></a></p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p45999697222846"><a name="zh-cn_topic_0030911465_p45999697222846"></a><a name="zh-cn_topic_0030911465_p45999697222846"></a>该指标用于统计弹性云服务器的内存使用率，以百分比为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p45999697222846"><a name="zh-cn_topic_0030911465_p45999697222846"></a><a name="zh-cn_topic_0030911465_p45999697222846"></a>该指标用于统计弹性云服务器的内存使用率，以百分比为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p15452979222846"><a name="zh-cn_topic_0030911465_p15452979222846"></a><a name="zh-cn_topic_0030911465_p15452979222846"></a>该弹性云服务器内存使用量 / 该弹性云服务器内存总量。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p15452979222846"><a name="zh-cn_topic_0030911465_p15452979222846"></a><a name="zh-cn_topic_0030911465_p15452979222846"></a>该弹性云服务器内存使用量 / 该弹性云服务器内存总量。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p43731801222846"><a name="zh-cn_topic_0030911465_p43731801222846"></a><a name="zh-cn_topic_0030911465_p43731801222846"></a>如果用户使用的镜像未安装vmtools，则无法获取该监控指标。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0030911465_row58041894222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p3772951222846"><a name="zh-cn_topic_0030911465_p3772951222846"></a><a name="zh-cn_topic_0030911465_p3772951222846"></a>磁盘使用率</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p37173646222846"><a name="zh-cn_topic_0030911465_p37173646222846"></a><a name="zh-cn_topic_0030911465_p37173646222846"></a>该指标用于统计弹性云服务器的磁盘使用情况，以百分比为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p37173646222846"><a name="zh-cn_topic_0030911465_p37173646222846"></a><a name="zh-cn_topic_0030911465_p37173646222846"></a>该指标用于统计弹性云服务器的磁盘使用情况，以百分比为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p22679847222846"><a name="zh-cn_topic_0030911465_p22679847222846"></a><a name="zh-cn_topic_0030911465_p22679847222846"></a>弹性云服务器磁盘使用容量 /弹性云服务器磁盘总容量。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p22679847222846"><a name="zh-cn_topic_0030911465_p22679847222846"></a><a name="zh-cn_topic_0030911465_p22679847222846"></a>弹性云服务器磁盘使用容量 /弹性云服务器磁盘总容量。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p25128347222846"><a name="zh-cn_topic_0030911465_p25128347222846"></a><a name="zh-cn_topic_0030911465_p25128347222846"></a>如果用户使用的镜像未安装vmtools，则无法获取该监控指标。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0030911465_row24828535222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p292712452495"><a name="zh-cn_topic_0030911465_p292712452495"></a><a name="zh-cn_topic_0030911465_p292712452495"></a>磁盘读带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p26808602222846"><a name="zh-cn_topic_0030911465_p26808602222846"></a><a name="zh-cn_topic_0030911465_p26808602222846"></a>该指标用于统计每秒从弹性云服务器读出数据量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p26808602222846"><a name="zh-cn_topic_0030911465_p26808602222846"></a><a name="zh-cn_topic_0030911465_p26808602222846"></a>该指标用于统计每秒从弹性云服务器读出数据量，以字节/秒为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p66019488222846"><a name="zh-cn_topic_0030911465_p66019488222846"></a><a name="zh-cn_topic_0030911465_p66019488222846"></a>弹性云服务器的磁盘读出的字节数之和 / 测量周期。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p66019488222846"><a name="zh-cn_topic_0030911465_p66019488222846"></a><a name="zh-cn_topic_0030911465_p66019488222846"></a>弹性云服务器的磁盘读出的字节数之和 / 测量周期。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p45978283222846"><a name="zh-cn_topic_0030911465_p45978283222846"></a><a name="zh-cn_topic_0030911465_p45978283222846"></a>byte_out = (rd_bytes - last_rd_bytes) /时间差。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0030911465_row11151367222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p18939164514497"><a name="zh-cn_topic_0030911465_p18939164514497"></a><a name="zh-cn_topic_0030911465_p18939164514497"></a>磁盘写带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p15463290222846"><a name="zh-cn_topic_0030911465_p15463290222846"></a><a name="zh-cn_topic_0030911465_p15463290222846"></a>该指标用于统计每秒写到弹性云服务器的数据量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p15463290222846"><a name="zh-cn_topic_0030911465_p15463290222846"></a><a name="zh-cn_topic_0030911465_p15463290222846"></a>该指标用于统计每秒写到弹性云服务器的数据量，以字节/秒为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p53157119222846"><a name="zh-cn_topic_0030911465_p53157119222846"></a><a name="zh-cn_topic_0030911465_p53157119222846"></a>弹性云服务器的磁盘写入的字节数之和 / 测量周期。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p53157119222846"><a name="zh-cn_topic_0030911465_p53157119222846"></a><a name="zh-cn_topic_0030911465_p53157119222846"></a>弹性云服务器的磁盘写入的字节数之和 / 测量周期。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p10759388222846"><a name="zh-cn_topic_0030911465_p10759388222846"></a><a name="zh-cn_topic_0030911465_p10759388222846"></a>无。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0030911465_row29725634222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p59508458491"><a name="zh-cn_topic_0030911465_p59508458491"></a><a name="zh-cn_topic_0030911465_p59508458491"></a>磁盘读IOPS</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p11529080222846"><a name="zh-cn_topic_0030911465_p11529080222846"></a><a name="zh-cn_topic_0030911465_p11529080222846"></a>该指标用于统计每秒从弹性云服务器读取数据的请求次数，以请求/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p11529080222846"><a name="zh-cn_topic_0030911465_p11529080222846"></a><a name="zh-cn_topic_0030911465_p11529080222846"></a>该指标用于统计每秒从弹性云服务器读取数据的请求次数，以请求/秒为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p10609393222846"><a name="zh-cn_topic_0030911465_p10609393222846"></a><a name="zh-cn_topic_0030911465_p10609393222846"></a>请求读取弹性云服务器磁盘的次数之和 / 测量周期。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p10609393222846"><a name="zh-cn_topic_0030911465_p10609393222846"></a><a name="zh-cn_topic_0030911465_p10609393222846"></a>请求读取弹性云服务器磁盘的次数之和 / 测量周期。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p54054474222846"><a name="zh-cn_topic_0030911465_p54054474222846"></a><a name="zh-cn_topic_0030911465_p54054474222846"></a>req_out = (rd_req - last_rd_req) /时间差。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0030911465_row16728218222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p11969114513496"><a name="zh-cn_topic_0030911465_p11969114513496"></a><a name="zh-cn_topic_0030911465_p11969114513496"></a>磁盘写IOPS</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p30846695222846"><a name="zh-cn_topic_0030911465_p30846695222846"></a><a name="zh-cn_topic_0030911465_p30846695222846"></a>该指标用于统计每秒从弹性云服务器写数据的请求次数，以请求/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p30846695222846"><a name="zh-cn_topic_0030911465_p30846695222846"></a><a name="zh-cn_topic_0030911465_p30846695222846"></a>该指标用于统计每秒从弹性云服务器写数据的请求次数，以请求/秒为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p51947303222846"><a name="zh-cn_topic_0030911465_p51947303222846"></a><a name="zh-cn_topic_0030911465_p51947303222846"></a>请求写入弹性云服务器磁盘的次数之和 / 测量周期。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p51947303222846"><a name="zh-cn_topic_0030911465_p51947303222846"></a><a name="zh-cn_topic_0030911465_p51947303222846"></a>请求写入弹性云服务器磁盘的次数之和 / 测量周期。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p46982038222846"><a name="zh-cn_topic_0030911465_p46982038222846"></a><a name="zh-cn_topic_0030911465_p46982038222846"></a>req_in = (wr_req - last_wr_req) /时间差。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0030911465_row20185161222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p24385382222846"><a name="zh-cn_topic_0030911465_p24385382222846"></a><a name="zh-cn_topic_0030911465_p24385382222846"></a>带内网络流入速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p29058915222846"><a name="zh-cn_topic_0030911465_p29058915222846"></a><a name="zh-cn_topic_0030911465_p29058915222846"></a>该指标用于在弹性云服务器内统计每秒流入弹性云服务器的网络流量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p29058915222846"><a name="zh-cn_topic_0030911465_p29058915222846"></a><a name="zh-cn_topic_0030911465_p29058915222846"></a>该指标用于在弹性云服务器内统计每秒流入弹性云服务器的网络流量，以字节/秒为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p66369310222846"><a name="zh-cn_topic_0030911465_p66369310222846"></a><a name="zh-cn_topic_0030911465_p66369310222846"></a>弹性云服务器的带内网络流入字节数之和/测量周期。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p66369310222846"><a name="zh-cn_topic_0030911465_p66369310222846"></a><a name="zh-cn_topic_0030911465_p66369310222846"></a>弹性云服务器的带内网络流入字节数之和/测量周期。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p7205036222846"><a name="zh-cn_topic_0030911465_p7205036222846"></a><a name="zh-cn_topic_0030911465_p7205036222846"></a>无。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0030911465_row64845332222846"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p17980571222846"><a name="zh-cn_topic_0030911465_p17980571222846"></a><a name="zh-cn_topic_0030911465_p17980571222846"></a>带内网络流出速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p47140109222846"><a name="zh-cn_topic_0030911465_p47140109222846"></a><a name="zh-cn_topic_0030911465_p47140109222846"></a>该指标用于在弹性云服务器内统计每秒流出弹性云服务器的网络流量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p47140109222846"><a name="zh-cn_topic_0030911465_p47140109222846"></a><a name="zh-cn_topic_0030911465_p47140109222846"></a>该指标用于在弹性云服务器内统计每秒流出弹性云服务器的网络流量，以字节/秒为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p48614360222846"><a name="zh-cn_topic_0030911465_p48614360222846"></a><a name="zh-cn_topic_0030911465_p48614360222846"></a>弹性云服务器的带内网络流出字节数之和 / 测量周期。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p48614360222846"><a name="zh-cn_topic_0030911465_p48614360222846"></a><a name="zh-cn_topic_0030911465_p48614360222846"></a>弹性云服务器的带内网络流出字节数之和 / 测量周期。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p45449088222846"><a name="zh-cn_topic_0030911465_p45449088222846"></a><a name="zh-cn_topic_0030911465_p45449088222846"></a>无。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0030911465_row22492419121215"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p1105187121215"><a name="zh-cn_topic_0030911465_p1105187121215"></a><a name="zh-cn_topic_0030911465_p1105187121215"></a>带外网络流入速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p22411285121215"><a name="zh-cn_topic_0030911465_p22411285121215"></a><a name="zh-cn_topic_0030911465_p22411285121215"></a>该指标用于在虚拟化层统计每秒流入弹性云服务器的网络流量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p22411285121215"><a name="zh-cn_topic_0030911465_p22411285121215"></a><a name="zh-cn_topic_0030911465_p22411285121215"></a>该指标用于在虚拟化层统计每秒流入弹性云服务器的网络流量，以字节/秒为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p4924384121215"><a name="zh-cn_topic_0030911465_p4924384121215"></a><a name="zh-cn_topic_0030911465_p4924384121215"></a>弹性云服务器的带外网络流入字节数之和 / 测量周期。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p4924384121215"><a name="zh-cn_topic_0030911465_p4924384121215"></a><a name="zh-cn_topic_0030911465_p4924384121215"></a>弹性云服务器的带外网络流入字节数之和 / 测量周期。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p63330824121215"><a name="zh-cn_topic_0030911465_p63330824121215"></a><a name="zh-cn_topic_0030911465_p63330824121215"></a>当使用SRIOV时，无法获取该监控指标。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0030911465_row62680097121215"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p27249966121215"><a name="zh-cn_topic_0030911465_p27249966121215"></a><a name="zh-cn_topic_0030911465_p27249966121215"></a>带外网络流出速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p59763627121215"><a name="zh-cn_topic_0030911465_p59763627121215"></a><a name="zh-cn_topic_0030911465_p59763627121215"></a>该指标用于在虚拟化层统计每秒流出弹性云服务器的网络流量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p59763627121215"><a name="zh-cn_topic_0030911465_p59763627121215"></a><a name="zh-cn_topic_0030911465_p59763627121215"></a>该指标用于在虚拟化层统计每秒流出弹性云服务器的网络流量，以字节/秒为单位。</p>
 </td>
-<td class="cellrowborder" valign="top" width="29.7029702970297%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p59175014121215"><a name="zh-cn_topic_0030911465_p59175014121215"></a><a name="zh-cn_topic_0030911465_p59175014121215"></a>弹性云服务器的带外网络流出字节数之和 / 测量周期。</p>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p59175014121215"><a name="zh-cn_topic_0030911465_p59175014121215"></a><a name="zh-cn_topic_0030911465_p59175014121215"></a>弹性云服务器的带外网络流出字节数之和 / 测量周期。</p>
 </td>
 <td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p28446836121215"><a name="zh-cn_topic_0030911465_p28446836121215"></a><a name="zh-cn_topic_0030911465_p28446836121215"></a>当使用SRIOV时，无法获取该监控指标。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0030911465_row12237175415352"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p76501192365"><a name="zh-cn_topic_0030911465_p76501192365"></a><a name="zh-cn_topic_0030911465_p76501192365"></a>CPU积分使用量</p>
+</td>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p13650121923614"><a name="zh-cn_topic_0030911465_p13650121923614"></a><a name="zh-cn_topic_0030911465_p13650121923614"></a>该指标表示积分型实例累积花费的CPU积分数，以“分”为单位。</p>
+</td>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p965071919368"><a name="zh-cn_topic_0030911465_p965071919368"></a><a name="zh-cn_topic_0030911465_p965071919368"></a>一个CPU积分等于一个vCPU按照100%利用率，运行1分钟。</p>
+</td>
+<td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p5650171933619"><a name="zh-cn_topic_0030911465_p5650171933619"></a><a name="zh-cn_topic_0030911465_p5650171933619"></a>仅T6型支持。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0030911465_row55131457123514"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p136501819133612"><a name="zh-cn_topic_0030911465_p136501819133612"></a><a name="zh-cn_topic_0030911465_p136501819133612"></a>CPU积分累积量</p>
+</td>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p2650161993610"><a name="zh-cn_topic_0030911465_p2650161993610"></a><a name="zh-cn_topic_0030911465_p2650161993610"></a>该指标表示实例自启动后已累积获得的CPU积分数，以“分”为单位。</p>
+</td>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p12650141913362"><a name="zh-cn_topic_0030911465_p12650141913362"></a><a name="zh-cn_topic_0030911465_p12650141913362"></a>根据Flavor定义，CPU积分/小时*小时-积分使用量。</p>
+</td>
+<td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p267142912142"><a name="zh-cn_topic_0030911465_p267142912142"></a><a name="zh-cn_topic_0030911465_p267142912142"></a>当累积积分超过上限以后，不再累积积分，初始积分不计入上限。</p>
+<p id="zh-cn_topic_0030911465_p1065031914368"><a name="zh-cn_topic_0030911465_p1065031914368"></a><a name="zh-cn_topic_0030911465_p1065031914368"></a>仅T6型支持。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0030911465_row8805604369"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p15680177371"><a name="zh-cn_topic_0030911465_p15680177371"></a><a name="zh-cn_topic_0030911465_p15680177371"></a>CPU超额积分累积量</p>
+</td>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p136801679374"><a name="zh-cn_topic_0030911465_p136801679374"></a><a name="zh-cn_topic_0030911465_p136801679374"></a>该指标表示在“CPU积分累积量”为零时，实例花费的超额积分数，以“分”为单位。</p>
+</td>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p86801171376"><a name="zh-cn_topic_0030911465_p86801171376"></a><a name="zh-cn_topic_0030911465_p86801171376"></a>一个CPU积分等于一个vCPU按照100%利用率，运行1分钟。</p>
+</td>
+<td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p127041532171410"><a name="zh-cn_topic_0030911465_p127041532171410"></a><a name="zh-cn_topic_0030911465_p127041532171410"></a>累积积分为0且服务器性能超过基准性能时，开始累积超额积分。</p>
+<p id="zh-cn_topic_0030911465_p56809793710"><a name="zh-cn_topic_0030911465_p56809793710"></a><a name="zh-cn_topic_0030911465_p56809793710"></a>仅T6型支持。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0030911465_row0987435366"><td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0030911465_p176805712379"><a name="zh-cn_topic_0030911465_p176805712379"></a><a name="zh-cn_topic_0030911465_p176805712379"></a>CPU超额积分收费量</p>
+</td>
+<td class="cellrowborder" valign="top" width="29.356435643564353%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0030911465_p46801377376"><a name="zh-cn_topic_0030911465_p46801377376"></a><a name="zh-cn_topic_0030911465_p46801377376"></a>该指标表示在“CPU积分累积量”为零时，实例花费的超额积分并需要收费的积分量，以“分”为单位。</p>
+</td>
+<td class="cellrowborder" valign="top" width="30.04950495049505%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0030911465_p10680157183713"><a name="zh-cn_topic_0030911465_p10680157183713"></a><a name="zh-cn_topic_0030911465_p10680157183713"></a>一个CPU积分等于一个vCPU按照100%利用率，运行1分钟。</p>
+</td>
+<td class="cellrowborder" valign="top" width="24.752475247524753%" headers="mcps1.2.5.1.4 "><p id="zh-cn_topic_0030911465_p36197353149"><a name="zh-cn_topic_0030911465_p36197353149"></a><a name="zh-cn_topic_0030911465_p36197353149"></a>超额积分累积达到上限且服务器持续长时间超过基准使用率运行。</p>
+<p id="zh-cn_topic_0030911465_p1368077183713"><a name="zh-cn_topic_0030911465_p1368077183713"></a><a name="zh-cn_topic_0030911465_p1368077183713"></a>仅T6型支持。</p>
 </td>
 </tr>
 </tbody>
