--- a/cn.zh-cn/用户指南/查看云服务监控指标原始数据.md
+++ b/cn.zh-cn/用户指南/查看云服务监控指标原始数据.md
@@ -8,7 +8,7 @@
 
 -   已在云监控中成功配置数据存储。配置数据存储请参见[配置数据存储](配置数据存储.md)。
 -   已安装java，并配置好环境变量。
--   已下载格式转换以及内容拼接工具metric-transfer-merge.jar，下载地址[https://metric-json-trans-csv.obs.myhwclouds.com/metric-transfer-merge.jar](https://metric-json-trans-csv.obs.myhwclouds.com/metric-transfer-merge.jar)。
+-   已下载格式转换以及内容拼接工具metric-transfer-merge.jar，下载地址[https://metric-json-trans-csv.obs.myhuaweicloud.com/metric-transfer-merge.jar](https://metric-json-trans-csv.obs.myhuaweicloud.com/metric-transfer-merge.jar)。
 
 ## 操作步骤<a name="section4763421295828"></a>
 
