--- a/cn.zh-cn/用户指南/查看监控图表-1.md
+++ b/cn.zh-cn/用户指南/查看监控图表-1.md
@@ -1,14 +1,23 @@
-# 查看监控图表<a name="ZH-CN_TOPIC_0103029436"></a>
+# 查看监控图表<a name="ZH-CN_TOPIC_0109974075"></a>
 
-## 操作步骤<a name="section14794123935011"></a>
+## 操作场景<a name="zh-cn_topic_0109299892_section1845020182914"></a>
+
+本章节指导用户查看事件监控的监控数据。
+
+## 操作步骤<a name="zh-cn_topic_0109299892_section9312104610488"></a>
 
 1.  登录管理控制台。
 2.  单击“管理与部署 \> 云监控”。
-3.  单击左侧导航栏的“日志监控”。
-4.  选择待查看日志组所在行的“查看监控图表”，进入“_监控图表_”页面。
+3.  单击页面左侧的“事件监控”，在事件监控页面，默认展示近24小时的所有系统事件。
 
-    **图 1**  监控图表<a name="fig26311181171"></a>  
-    ![](figures/监控图表.png "监控图表")
+    您也可以单击页面上方的“近1小时”“近3小时”“近12小时”“近7天”“近30天”按钮，分别查看不同时段的事件。
 
-5.  在这个页面，用户可以选择页面左上方的时间范围按钮，查看该云服务资源“近1小时”、“近3小时”和“近12小时”的监控原始数据曲线图，同时监控指标视图右上角会动态显示对应时段内监控指标的最大值与最小值。
+    **图 1**  事件监控<a name="zh-cn_topic_0109299892_fig1655012347473"></a>  
+    ![](figures/事件监控.png "事件监控")
+
+4.  单击具体事件右侧的操作列的“查看事件”，可查看具体事件的内容。
+
+    **图 2**  查看事件<a name="zh-cn_topic_0109299892_fig10238171711529"></a>  
+    ![](figures/查看事件.png "查看事件")
+
 
