--- a/cn.zh-cn/用户指南/裸金属服务器操作系统监控支持的监控指标.md
+++ b/cn.zh-cn/用户指南/裸金属服务器操作系统监控支持的监控指标.md
@@ -613,7 +613,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0104704449_p10923171135217"><a name="zh-cn_topic_0104704449_p10923171135217"></a><a name="zh-cn_topic_0104704449_p10923171135217"></a>该指标用于统计测量对象网卡每秒接收的数据包数。</p>
 <p id="p34321561417"><a name="p34321561417"></a><a name="p34321561417"></a>单位：Count/s</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0104704449_p199231611135216"><a name="zh-cn_topic_0104704449_p199231611135216"></a><a name="zh-cn_topic_0104704449_p199231611135216"></a>≥ 0 Counts/s</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0104704449_p199231611135216"><a name="zh-cn_topic_0104704449_p199231611135216"></a><a name="zh-cn_topic_0104704449_p199231611135216"></a>≥ 0 counts/s</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p139231011205218"><a name="zh-cn_topic_0104704449_p139231011205218"></a><a name="zh-cn_topic_0104704449_p139231011205218"></a>裸金属服务器</p>
 </td>
@@ -623,7 +623,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0104704449_p16923151110524"><a name="zh-cn_topic_0104704449_p16923151110524"></a><a name="zh-cn_topic_0104704449_p16923151110524"></a>该指标用于统计测量对象网卡每秒发送的数据包数。</p>
 <p id="p673911116424"><a name="p673911116424"></a><a name="p673911116424"></a>单位：Count/s</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0104704449_p39231511205216"><a name="zh-cn_topic_0104704449_p39231511205216"></a><a name="zh-cn_topic_0104704449_p39231511205216"></a>≥ 0 Counts/s</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0104704449_p39231511205216"><a name="zh-cn_topic_0104704449_p39231511205216"></a><a name="zh-cn_topic_0104704449_p39231511205216"></a>≥ 0 counts/s</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0104704449_p13923161165215"><a name="zh-cn_topic_0104704449_p13923161165215"></a><a name="zh-cn_topic_0104704449_p13923161165215"></a>裸金属服务器</p>
 </td>
