--- a/cn.zh-cn/用户指南/创建告警规则-1.md
+++ b/cn.zh-cn/用户指南/创建告警规则-1.md
@@ -66,7 +66,7 @@
         <tbody><tr id="row89519954220"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p9158953195713"><a name="p9158953195713"></a><a name="p9158953195713"></a>告警策略</p>
         </td>
         <td class="cellrowborder" valign="top" width="63.73000000000001%" headers="mcps1.2.4.1.2 "><p id="p191611753195714"><a name="p191611753195714"></a><a name="p191611753195714"></a>触发告警规则的告警策略。</p>
-        <p id="p1016285316576"><a name="p1016285316576"></a><a name="p1016285316576"></a>例如：可用性，监控周期为5分钟，连续三个周期原始值≤90%</p>
+        <p id="p1016285316576"><a name="p1016285316576"></a><a name="p1016285316576"></a>例如：可用性，监控周期为5分钟，连续三个周期平均值≤90%</p>
         </td>
         <td class="cellrowborder" valign="top" width="21.3%" headers="mcps1.2.4.1.3 "><p id="p7165553195712"><a name="p7165553195712"></a><a name="p7165553195712"></a>-</p>
         </td>
