--- a/cn.zh-cn/用户指南/创建告警规则-3.md
+++ b/cn.zh-cn/用户指南/创建告警规则-3.md
@@ -2,8 +2,6 @@
 
 -   **[告警规则简介](告警规则简介.md)**  
 
--   **[使用告警模板创建告警规则](使用告警模板创建告警规则.md)**  
-
--   **[用户为某一监控指标创建自定义告警规则](用户为某一监控指标创建自定义告警规则.md)**  
+-   **[创建告警规则](创建告警规则-4.md)**  
 
 
