--- a/cn.zh-cn/用户指南/创建告警规则.md
+++ b/cn.zh-cn/用户指南/创建告警规则.md
@@ -106,7 +106,7 @@
         <tr id="row649114256342"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1349452503414"><a name="p1349452503414"></a><a name="p1349452503414"></a>告警策略</p>
         </td>
         <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p449616252341"><a name="p449616252341"></a><a name="p449616252341"></a>触发告警规则的告警策略。</p>
-        <p id="p1149717250346"><a name="p1149717250346"></a><a name="p1149717250346"></a>例如：CPU使用率，监控周期为5分钟，连续三个周期原始值≥80%</p>
+        <p id="p1149717250346"><a name="p1149717250346"></a><a name="p1149717250346"></a>例如：CPU使用率，监控周期为5分钟，连续三个周期平均值≥80%</p>
         </td>
         <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p18500122517346"><a name="p18500122517346"></a><a name="p18500122517346"></a>-</p>
         </td>
@@ -114,8 +114,9 @@
         <tr id="row6500102573410"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p250482511349"><a name="p250482511349"></a><a name="p250482511349"></a>挂载点</p>
         </td>
         <td class="cellrowborder" valign="top" width="63.12000000000001%" headers="mcps1.2.4.1.2 "><p id="p25060258344"><a name="p25060258344"></a><a name="p25060258344"></a>当监控指标为细颗粒度的磁盘类监控指标时需配置该参数。</p>
+        <p id="p12613193516571"><a name="p12613193516571"></a><a name="p12613193516571"></a>Windows系统请输入对应的驱动器号，比如C、D或者E等，Linux系统请输入对应的挂载点，比如/dev、/opt等。</p>
         </td>
-        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p195101225163412"><a name="p195101225163412"></a><a name="p195101225163412"></a>/</p>
+        <td class="cellrowborder" valign="top" width="21.91%" headers="mcps1.2.4.1.3 "><p id="p195101225163412"><a name="p195101225163412"></a><a name="p195101225163412"></a>/dev</p>
         </td>
         </tr>
         <tr id="row1051172563420"><td class="cellrowborder" valign="top" width="14.970000000000002%" headers="mcps1.2.4.1.1 "><p id="p1951582520341"><a name="p1951582520341"></a><a name="p1951582520341"></a>告警级别</p>
