--- a/cn.zh-cn/用户指南/创建自定义告警模板.md
+++ b/cn.zh-cn/用户指南/创建自定义告警模板.md
@@ -72,7 +72,7 @@
     <tr id="row95813546476"><td class="cellrowborder" valign="top" width="19.43%" headers="mcps1.2.4.1.1 "><p id="p9435204373719"><a name="p9435204373719"></a><a name="p9435204373719"></a>告警策略</p>
     </td>
     <td class="cellrowborder" valign="top" width="52.690000000000005%" headers="mcps1.2.4.1.2 "><p id="p2043584343715"><a name="p2043584343715"></a><a name="p2043584343715"></a>触发告警的告警策略。</p>
-    <p id="p043712111488"><a name="p043712111488"></a><a name="p043712111488"></a>例如：监控周期为5分钟，连续三个周期原始值≥80%</p>
+    <p id="p043712111488"><a name="p043712111488"></a><a name="p043712111488"></a>例如：监控周期为5分钟，连续三个周期平均值≥80%</p>
     </td>
     <td class="cellrowborder" valign="top" width="27.88%" headers="mcps1.2.4.1.3 "><p id="p54357432379"><a name="p54357432379"></a><a name="p54357432379"></a>-</p>
     </td>
